Have each recipe link listed under each other in index.html
Each recipe link is listed under each other for cleaner formatting

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/birria-tacos.html">Birria Tacos</a>
+
+        <p><a href="recipes/birria-tacos.html">Birria Tacos</a></p>
+        <p><a href="recipes/chicken-and-mushrooms.html">Chicken and Mushrooms</a></p>
+        <p><a href="recipes/cacio-e-pepe.html">Cacio e Pepe</a></p>
     </body>
 </html>
