--- a/recipes/chicken-and-mushrooms.html
+++ b/recipes/chicken-and-mushrooms.html
@@ -37,5 +37,11 @@
             <li>Add butter and any residual juices on the plate of chicken to the mushrooms. Stir constantly until butter is melted and sauce is formed. Season with salt and ground black pepper to taste. Pour mushroom sauce over chicken and serve.</li>
         </ol>
 
+        <h2>Check out these other recipes</h2>
+
+        <ul>
+            <li><a href="recipes/birria-tacos.html">Birria Tacos</a></li>
+            <li><a href="recipes/cacio-e-pepe">Cacio e Pepe</a></li>
+        </ul>
     </body>
 </html>
