Have recipe links open to a new tab
Recipe links open to a new tab for user convenince

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <body>
         <h1>Odin Recipes</h1>
 
-        <p><a href="recipes/birria-tacos.html">Birria Tacos</a></p>
-        <p><a href="recipes/chicken-and-mushrooms.html">Chicken and Mushrooms</a></p>
-        <p><a href="recipes/cacio-e-pepe.html">Cacio e Pepe</a></p>
+        <p><a href="recipes/birria-tacos.html" target="_blank" rel="noopener noreferrer">Birria Tacos</a></p>
+        <p><a href="recipes/chicken-and-mushrooms.html" target="_blank" rel="noopener noreferrer">Chicken and Mushrooms</a></p>
+        <p><a href="recipes/cacio-e-pepe.html" target="_blank" rel="noopener noreferrer">Cacio e Pepe</a></p>
     </body>
 </html>
