--- a/recipes/birria-tacos.html
+++ b/recipes/birria-tacos.html
@@ -73,8 +73,8 @@
         <h2>Check out these other recipes</h2>
 
         <ul>
-          <li><a href="recipes/chicken-and-mushrooms">Chicken and Mushrooms</a></li>
-          <li><a href="recipes/cacio-e-pepe">Cacio e Pepe</a></li>  
+          <li><a href="recipes/chicken-and-mushrooms.html" target="_blank" rel="noopener noreferrer">Chicken and Mushrooms</a></li>
+          <li><a href="recipes/cacio-e-pepe.html" target="_blank" rel="noopener noreferrer">Cacio e Pepe</a></li>  
         </ul>
     </body>
 </html>
