--- a/recipes/chicken-and-mushrooms.html
+++ b/recipes/chicken-and-mushrooms.html
@@ -40,8 +40,8 @@
         <h2>Check out these other recipes</h2>
 
         <ul>
-            <li><a href="recipes/birria-tacos.html">Birria Tacos</a></li>
-            <li><a href="recipes/cacio-e-pepe">Cacio e Pepe</a></li>
+            <li><a href="birria-tacos.html" target="_blank" rel="noopener noreferrer">Birria Tacos</a></li>
+            <li><a href="cacio-e-pepe.html" target="_blank" rel="noopener noreferrer">Cacio e Pepe</a></li>
         </ul>
     </body>
 </html>
