Recipe links do not open or load correctly
Recipes links open in a new tab and load correctly by removing the recipe directory

--- a/recipes/cacio-e-pepe.html
+++ b/recipes/cacio-e-pepe.html
@@ -35,8 +35,8 @@
         <h2> Check out these other recipes</h2>
 
         <ul>
-            <li><a href="recipes/birria-tacos">Birria Tacos</a></li>
-            <li><a href="recipes/chicken-and-mushrooms">Chicken and Mushrooms</a></li>
+            <li><a href="birria-tacos.html" target="_blank" rel="noopener noreferrer">Birria Tacos</a></li>
+            <li><a href="chicken-and-mushrooms.html" target="_blank" rel="noopener noreferrer">Chicken and Mushrooms</a></li>
         </ul>
     </body>
 </html>
